Styled example html. Removed version number from the jquery plugin file. Added license files. Added komodo edit solution. Added mouse hover support and prevented double wrapping.

--- a/collapsiblePanel.css
+++ b/collapsiblePanel.css
@@ -1,6 +1,16 @@
 ﻿img.collapseExpandToggle {
 	margin-right: 10px;
 }
+.collapsiblePanelOuter {
+	border: solid 1px #000000;
+}
+.collapsiblePanelTitle {
+	padding-left: 3px;
+	border-bottom: solid 3px #000000;
+}
+.collapsiblePanelTitleHover {
+	cursor: pointer;
+}
 .collapseTitleContents {
-	display: inline;
+	display: inline-block;
 }
